--- a/css/custom.css
+++ b/css/custom.css
@@ -3,11 +3,18 @@
     opacity: 0.7;
     position: absolute; 
     z-index: 1;
-    padding-top: 0;
-    margin-top: 0;
+    padding-top: -100px;
+    margin-top: -100px;
 }
 #content {
-    color: #000000;
+    color: #c4c7c7;
+    padding-top: -70px;
+    margin-top: -70px;
+
+}
+#about {
+    padding-top: 170px;
+    margin-top: 170px;
 }
 .container {
     width:100%;
