--- a/css/custom.css
+++ b/css/custom.css
@@ -1,20 +1,54 @@
 #bg-img {
     block-size: cover;
-    opacity: 0.7;
-    position: absolute; 
-    z-index: 1;
+    opacity: 0.6;
     padding-top: -100px;
     margin-top: -100px;
 }
+.shadow {
+    color: rgb(231, 228, 228);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
+    text-shadow:
+      -3px -3px 0 rgb(70, 69, 69),
+      3px -3px 0 rgb(70, 69, 69),
+      -3px 3px 0 rgb(70, 69, 69),
+      3px 3px 0 rgb(70, 69, 69),
+      4px 4px 0 rgb(211, 208, 208),
+      5px 5px 0 rgb(218, 215, 215),
+      6px 6px 0 rgb(212, 212, 212),
+      7px 7px 0 rgb(223, 222, 222);
+    line-height: 0.8em;
+    letter-spacing: 0em;
+    transform: scaleY(0.7);
+    -webkit-transform: scaleY(0.7);
+    -moz-transform: scaleY(0.7);
+    margin:0;
+    text-align: center;
+    font-size: 70px;
+}
 #content {
-    color: #c4c7c7;
-    padding-top: -70px;
-    margin-top: -70px;
-
+    margin-top: -28em;
+    position: relative;
+    float: center;
+    
+}
+.lead-1 {
+    font-size: 28px;
+    color:rgb(187, 184, 184);
+    
 }
 #about {
     padding-top: 170px;
     margin-top: 170px;
+}
+#bg-about {
+    border-radius: 30%;
+    background-color: rgb(135, 189, 172);
+    opacity: 0.6;
+}
+
+h2 {
+    padding-top: 10px;
 }
 .container {
     width:100%;
@@ -23,8 +57,77 @@
     margin-right:auto;
     margin-left:auto;
 }
-.make_me_semi_transparent {
-
-    filter: alpha(opacity=50);
-    opacity: 0.5;
+.cards {
+    display: block;
+    column-count: 3;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.cards h3 {
+    position: relative;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.cards p {
+    text-align: center;
+    padding-top: 20px;
+    font-style: italic;
+    font-size: 18px;
+}
+.cards a:link {
+    color: #313030;
+    font-weight: bold;
+    text-decoration: none;
+}
+.cards a:hover {
+    color: #03a79e;
+    text-decoration: none;
+}
+#left-card {
+    position: relative;
+    margin-left: 30px;
+}
+.left-img {
+    height: 400px;
+    width: 400px;
+    background: url('gwt.jpg') center top no-repeat;
+}
+.left-img:hover {
+    opacity: 0.6;
+	filter: alpha(opacity=60);
+}
+#middle-card {
+    position: relative;
+    float: center;
+    text-align: center;
+}
+.middle-img {
+    height: 400px;
+    width: 286.4px;
+    background: url('istanbul.jpg') center top no-repeat;
+}
+.middle-img:hover {
+    opacity: 0.6;
+	filter: alpha(opacity=60);
+}
+#right-card {
+    position: relative;
+    float: right;
+    margin-right: 30px;
+}
+.right-img {
+    height: 400px;
+    width: 400px;
+    background: url('goml.jpg') center top no-repeat;
+}
+.right-img:hover {
+    opacity: 0.6;
+	filter: alpha(opacity=60);
+}
+blockquote {
+    border-left: 4px solid #ccc;
+    color: #a5a4a4;
+    font-style: italic;
+    margin: 30px 0 30px 15px;
+    padding-left: 15px;
 }
